--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <div class="overlay-text">🎉 Happy Birthday Fibriana! 🎂🥳</div>
     <div class="frame"></div>
     
-    <a-scene embedded arjs>
+    <a-scene embedded arjs="sourceType: webcam; facingMode: user; debugUIEnabled: false;">
         <!-- Kamera & Lingkungan -->
-        <a-marker-camera preset="hiro"></a-marker-camera>
+        <a-marker-camera preset="custom"></a-marker-camera>
 
         <!-- Kue Ulang Tahun -->
         <a-entity position="0 0 -3">
